--- a/_styles/variables.css
+++ b/_styles/variables.css
@@ -1,5 +1,5 @@
 :root {
-    --color-yellow: #FDD17A;
-    --color-red: #F55321;
-    --color-gray: #4E4541;
+  --color-yellow: #fdd17a;
+  --color-red: #f55321;
+  --color-gray: #4e4541;
 }
