--- a/_styles/fonts.css
+++ b/_styles/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'b';
-    src: url('/fonts/BebasNeue-Regular.ttf');
-    font-weight: 400;
+  font-family: "b";
+  src: url("/fonts/BebasNeue-Regular.ttf");
+  font-weight: 400;
 }
