--- a/_styles/pages/home.css
+++ b/_styles/pages/home.css
@@ -1,10 +1,10 @@
-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: 'b';
-    min-height: 100vh;
-    h1 {
-        font-size: 3rem;
-    }
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "b";
+  min-height: 100vh;
+  h1 {
+    font-size: 3rem;
+  }
 }
